base: Disable Emergency affordance feature in Power Menu
Change-Id: I0b7a3c79edfc14ca32c997cf9cc7bc95b68fd722
Signed-off-by: blinoff82 <blinov.in@gmail.com>

--- a/core/res/res/values/colt_symbols.xml
+++ b/core/res/res/values/colt_symbols.xml
@@ -43,4 +43,9 @@
 
     <java-symbol type="string" name="reboot_title" />
     <java-symbol type="string" name="reboot_confirm" />
+
+    <!-- Emergency button in power menu -->
+    <java-symbol type="bool" name="config_showEmergencyButtonInPowerMenu" />
+
+
 </resources>
