--- a/packages/SystemUI/res/values/colt_config.xml
+++ b/packages/SystemUI/res/values/colt_config.xml
@@ -28,5 +28,12 @@
 
     <!-- Max visible system icons -->
     <integer name="config_maxVisibleStatusIconContainer">6</integer>
+
+    <!-- The CPU temperature sensor path, defaults to empty -->
+    <string name="config_cpuTempSensor" translatable="false">/sys/class/thermal/thermal_zone0/temp</string>
+
+    <!-- The CPU temperature divider, if needed -->
+    <integer name="config_cpuTempDivider" translatable="false">1</integer>
 </resources>
+
 
