--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2854,6 +2854,7 @@
         <item>lockdown</item>
         <item>logout</item>
         <item>screenshot</item>
+        <item>torch</item>
         <item>airplane</item>
         <item>settings</item>
         <item>users</item>
