--- a/packages/SystemUI/res/values/colt_dimens.xml
+++ b/packages/SystemUI/res/values/colt_dimens.xml
@@ -12,9 +12,9 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
 <resources>
-    <dimen name="current_weather_image_size">42dp</dimen>
 
-    <dimen name="qs_tile_height_wo_label">48dp</dimen>
+   <!-- Sets a custom extra padding for the QS icons and statusbar date -->
+   <dimen name="qs_items_padding">8dp</dimen>
 
     <dimen name="current_weather_image_size">42dp</dimen>
 
