SystemUI: Allow overlaying max system icons
neobuddy89:
* Rewrite and init like other dimens.
* Reduce default to 6. With n/w traffic and center clock, 7 is too high.

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/packages/SystemUI/res/values/colt_config.xml
+++ b/packages/SystemUI/res/values/colt_config.xml
@@ -26,5 +26,7 @@
         aod,caffeine
     </string>
 
+    <!-- Max visible system icons -->
+    <integer name="config_maxVisibleStatusIconContainer">6</integer>
 </resources>
 
